# rust-sdk

./: .example.env  Cargo.toml  README.md
notes/: ref_client.txt
src/: client.rs  constants.rs  errors.rs  models.rs
src/model/: mod.rs  queries.rs  submits.rs
src/models/: activity.rs  mod.rs  query_responses.rs  submit_responses.rs  submits.rs
test/: client.t.rs
