[package]
name = "rust_sdk"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
name = "client"
path = "src/client.rs"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.24", features = ["json"] }
url = "2.5.0"
lazy_static = "1.4"

base64 = { version = "0.22.0", default-features = false, features = ["std"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
serde = { version = "1.0.197", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.115", default-features = false, features = ["std"] }
thiserror = { version = "1.0.58", default-features = false }
